--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -23,8 +23,7 @@ background: #e5e5e5;
 }
 /*thumb*/
 body::-webkit-scrollbar-thumb {
-background: #315e2d;
-border: 1px solid #397234;
+background: #397234;
 }
 
 .w-layout-grid {
