--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -7018,7 +7018,8 @@ a {
   background-color: var(--dark-olive-green);
   opacity: 1;
   border-radius: 5px;
-  justify-content: flex-start;
+  justify-content: center;
+  text-align: center !important;
   align-items: center;
   margin-bottom: 10px;
   margin-left: 0;
