--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -3092,6 +3092,24 @@ a {
   right: 0%;
 }
 
+.rest-popup {
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--dark-olive-green);
+  opacity: 1;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));
+  flex-direction: column;
+  align-items: center;
+  padding: 125px;
+  display: flex;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
 .workout-popup.fixed {
   height: 100dvh;
   padding-bottom: 0;
