--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -5578,12 +5578,13 @@ a {
   justify-content: flex-start;
   align-items: center;
   display: flex;
+  margin-top: 15px;
 }
 
 .display_phone_cell.v-middle {
   max-width: 400px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   display: none;
 }
