--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -1086,6 +1086,16 @@ a {
   position: relative;
 }
 
+.scrollable_base > .content {
+  width: 100%;
+  height: auto;
+  max-width: none;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  position: relative;
+}
+
 .content.tab-1 {
   display: flex;
 }
@@ -5332,7 +5342,7 @@ a {
   width: 100vw;
   justify-content: flex-start;
   align-items: stretch;
-  margin-left: auto;
+  margin-left: 0;
   padding: 50px 125px 50px 0;
   display: flex;
   overflow: scroll;
