--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -28,6 +28,22 @@ background: #397234;
 border: none !important;
 }
 
+/* */
+.scrollable_base {
+  padding: 5vw !important;
+}
+
+.scrollable_base > .content {
+  width: 100%;
+  height: auto;
+  max-width: none !important;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  position: relative;
+}
+/* */
+
 .w-layout-grid {
   grid-row-gap: 16px;
   grid-column-gap: 16px;
@@ -1080,16 +1096,6 @@ a {
   width: 100%;
   height: auto;
   max-width: 1000px;
-  flex-direction: column;
-  align-items: center;
-  display: flex;
-  position: relative;
-}
-
-.scrollable_base > .content {
-  width: 100%;
-  height: auto;
-  max-width: none;
   flex-direction: column;
   align-items: center;
   display: flex;
