--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -7119,9 +7119,9 @@ a {
 }
 
 .complete_guide {
-  z-index: 10;
-  width: 25px;
-  height: 25px;
+  z-index: 9000;
+  width: 75px;
+  height: 75px;
   background-image: url('../images/the_legends-status_circle-complete-green.svg');
   background-position: 50%;
   background-repeat: no-repeat;
@@ -7308,6 +7308,31 @@ a {
   height: 100px;
   color: var(--dark-olive-green);
   transition: opacity .5s;
+}
+
+.filter__btn {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 32px;
+  background-color: transparent;
+  padding: 5px;
+  width: 100%;
+  color: rgba(0, 0, 0, .5);
+  text-align: center;
+  cursor: pointer;
+  border-bottom: 2px solid rgba(0, 0, 0, .5);
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 32px;
+  display: flex;
+  position: relative;
+}
+
+.active__filter {
+  color: #397234;
+  border-color: #397234;
 }
 
 .vuetext {
@@ -8551,8 +8576,8 @@ a {
   }
 
   .complete_guide {
-    width: 20px;
-    height: 20px;
+    width: 75px;
+    height: 75px;
     border-radius: 100%;
   }
 
@@ -9616,11 +9641,11 @@ a {
   }
 
   .complete_guide {
-    width: 15px;
-    height: 15px;
-    min-height: 15px;
-    min-width: 15px;
-    border-radius: 15px;
+    width: 75px;
+    height: 75px;
+    min-height: 25px;
+    min-width: 25px;
+    border-radius: 25px;
     display: none;
   }
 
