--- a/css/the-legends-web-app.css
+++ b/css/the-legends-web-app.css
@@ -1843,6 +1843,10 @@ a {
   overflow: auto;
 }
 
+.app-head.guide-page > .app-head {
+  min-height: 100vh !important;
+}
+
 .app-head.home {
   background-color: #000;
   padding: 0;
